src/app/components/send/send.component.css
.form-select-source, .form-input-destination, .form-select-destination {
	max-width: 800px;
}

.form-amount {
	max-width: 450px;
}

.block-amount-primary {
  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
  line-height: 1;
  margin-top: 4px;
}

.block-amount-primary > .amount-integer {
  font-size: 32px;
  font-weight: 700;
}

.block-amount-primary > .amount-fractional,
.block-amount-primary > .currency-name {
  font-size: 21px;
}

.block-amount-primary > .currency-name {
  margin-left: 6px;
}

.block-balance .balance-amount-primary .amount-amount-sign,
.block-balance .balance-amount-primary .amount-integer,
.block-balance .balance-amount-primary .amount-fractional,
.block-balance .balance-amount-primary .currency-name {
  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
  font-size: 16px;
}

.block-balance .balance-amount-primary .amount-sign {
  font-weight: 500;
  margin-right: 1px;
}

.block-balance .balance-amount-primary .amount-integer {
  font-weight: 700;
}

.block-balance .balance-amount-primary .amount-fractional {
  font-weight: 500;
}

.block-balance .balance-amount-primary .currency-name {
  font-weight: 400;
  margin-left: 5px;
}

.send-types-wrapper {
  margin: -5px;
  padding-bottom: 15px;
}
.send-types-frame {
  display: inline-block;
}
.send-types-tab {
  width: 400px;
  margin: 5px;
  border-radius: 6px;
  font-weight: 500;
}
.send-types-tab-active {
  border-color: transparent;
}

.icon-nano-logo {
  margin: 13px 11px;
  width: 32px;
  background-color: currentcolor;
  -webkit-mask-image: url('assets/img/nano-mark-simple.svg');
  mask-image: url('assets/img/nano-mark-simple.svg');
}

